added basic shit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>fuck</h1>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="interface.css" />
+		<script type="text/javascript" src="main.js"></script>
+  </head>
+  <body>
+    
+  </body>
+</html>
