--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<script type="text/javascript" src="main.js"></script>
   </head>
   <body>
-    
+	  <button onClick="testClick(1)"</button>
   </body>
 </html>
