--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script type="text/javascript" src="main.js"></script>
   </head>
   <body>
-	  <button onClick="testClick(1)"</button>
+	  <button onClick="testClick(1)">Gain a test.</button>
+	  <p> Number of tests is <span id="tests">e</span> 
   </body>
 </html>
