--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   </head>
   <body>
 	  <button onClick="testClick(1)">Gain a test.</button>
-	  <p> Number of tests is <span id="tests">e</span> 
+	  <p> Number of tests is <span id="tests"></span> 
+		  
+  <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
