adding buyable children

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
 	  <button onClick="testClick(1)">Gain a test.</button>
 	  <p> Number of tests is <span id="tests"></span> 
-		  
+	  <button onClick"buyFirstGrade()"> Cost of a first grader: <span id="firstgrades">0</span></button>
   <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
