--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <body>
 	  <button onClick="testClick(1)">Gain a test.</button>
 	  <p> Number of tests is <span id="tests"></span> 
-	  <button onClick"buyFirstGrade()"> Cost of a first grader: <span id="firstgrades">0</span></button>
+		  <button onClick"buyFirstgrader()">Buy a first grader</button>
+		  <span id="firstgraders">0</span> First Graders testing for you.<br />
+		  Cost of one small child: <span id="firstgraderCost">10</span><br />
+		  
   <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
