--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
 	  <button onClick="testClick(1)">Gain a test.</button>
-	  <p> Number of tests is <span id="tests"></span> 
-		  <button onClick"buyFirstgrader()">Buy a first grader</button>
+	  <p> Number of tests is <span id="tests"></span><br />
+		  <button onClick"buyFirstgrader()">Buy a first grader</button><br />
 		  <span id="firstgraders">0</span> First Graders testing for you.<br />
 		  Cost of one small child: <span id="firstgraderCost">10</span><br />
 		  
