--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body>
 	  <button onClick="testClick(1)">Gain a test.</button>
-	  <p> Number of tests is <span id="tests"></span><br />
-		  <button onClick"buyFirstgrader()">Buy a first grader</button><br />
-		  <span id="firstgraders">0</span> First Graders testing for you.<br />
-		  Cost of one small child: <span id="firstgraderCost">10</span><br />
+	  <p> Number of tests is <span id="tests"></span><br>
+		  <button onClick"buyFirstgrader()">Buy a first grader</button><br>
+		  <span id="firstgraders">0</span> First Graders testing for you.<br>
+		  Cost of one small child: <span id="firstgraderCost">10</span><br>
 		  
   <script type="text/javascript" src="main.js"></script>
   </body>
