--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="interface.css" />
-		<script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
 	  <button onClick="testClick(1)">Gain a test.</button>
-	  <p> Number of tests is <span id="tests"></span><br>
-		  <button onClick"buyFirstgrader()">Buy a first grader</button><br>
-		  <span id="firstgraders">0</span> First Graders testing for you.<br>
-		  Cost of one small child: <span id="firstgraderCost">10</span><br>
+	  <p> Number of tests is <span id="tests"></span><br></p>
+	  <button onClick"buyFirstgrader()">Buy a first grader</button><br>
+	  <span id="firstgraders">0</span> First Graders testing for you.<br>
+	  Cost of one small child: <span id="firstgraderCost">10</span><br>
 		  
   <script type="text/javascript" src="main.js"></script>
   </body>
