--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 	  <br />
 	  Cost of one small child: <span id="firstgraderCost">10</span>
 	  <br />
-		  
+	  <button onClick="buyClickUp()">Buy a click upgrade</button>
+	  <br />
+	  <span id="clickupgrades">0</span> Upgrades
+	  <br />
+	  Cost of the next click multiplier: <span id="clickupCost">25</span>
+	  <br />
   <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
